Add 'Hola' greeting to welcome panel and implement demo
Co-authored-by: pandita45 <208285435+pandita45@users.noreply.github.com>