@@ -141,7 +141,7 @@ public class PanelTorneoDirecto extends JPanel {
      */
     public void mostrarGanador() {
         if (!Torneo.ganadores.isEmpty()) {
-            Texto ganador = new Texto(Torneo.ganadores.removeFirst().getNombre(),0,0,0,0);
+            Texto ganador = new Texto(Torneo.ganadores.remove(0).getNombre(),0,0,0,0);
             switch (CantidadParticipantes){
                 case 16 -> ganador.setBound(posicionesGanadores[10+cont_1][0],posicionesGanadores[10+cont_1][1],250,45);
                 case 8 -> ganador.setBound(posicionesGanadores[3+cont_1][0],posicionesGanadores[3+cont_1][1],300,60);
